--- a/lib/styles.css
+++ b/lib/styles.css
@@ -11,8 +11,8 @@ body {
 footer {
   height: 45px;
   background-color: #0a0a0a;
-  position: absolute;
-  bottom: 0;
+  position: fixed;
+  bottom: 0px;
   width:100%;
 }
 
