--- a/lib/styles.css
+++ b/lib/styles.css
@@ -86,6 +86,8 @@ span h3 {
   text-align: center;
   width: 70%;
   padding: 1.2rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .header-display {
