--- a/lib/styles.css
+++ b/lib/styles.css
@@ -110,6 +110,31 @@ span h3 {
   color: #884E5D;
 }
 
+.playlist-btn {
+  background-color: #0a0a0a;
+  color: white;
+  font-size: 1rem;
+  margin-right: 1rem;
+  border-radius: 10px;
+  border-color: #884E5D;
+  border-width: 2px;
+}
+
+.playlist-btn:hover {
+  cursor: pointer;
+  color: #884E5D;
+}
+
+.playlists-container {
+  border-radius: 15px;
+  background-color: #0a0a0a;
+  text-align: center;
+  width: 50%;
+  padding: 1.2rem;
+  align-items: center;
+  justify-content: center;
+}
+
 .search-container {
   border-radius: 15px;
   background-color: #0a0a0a;
@@ -190,7 +215,6 @@ span h3 {
   background-color: #884E5D;
   color: white;
   font-size: 1rem;
-  font-weight: 600;
   margin: 1rem;
   margin-bottom: 2rem;
 }
@@ -203,7 +227,6 @@ span h3 {
   border-radius: 10px;
   background-color: #884E5D;
   color: white;
-  font-weight: 600;
   margin-right: 1rem;
 }
 
