--- a/lib/styles.css
+++ b/lib/styles.css
@@ -66,6 +66,22 @@ span h3 {
   font-size: 2rem;
 }
 
+.create-playlist-btn {
+  background-color: #0a0a0a;
+  color: white;
+  font-size: 1rem;
+  margin-left: .5rem;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  border-color: #884E5D;
+  border-width: 2px;
+}
+
+.create-playlist-btn:hover {
+  cursor: pointer;
+  color: #884E5D;
+}
+
 .fas {
   float: left;
 }
@@ -110,21 +126,6 @@ span h3 {
   color: #884E5D;
 }
 
-.playlist-btn {
-  background-color: #0a0a0a;
-  color: white;
-  font-size: 1rem;
-  margin-right: 1rem;
-  border-radius: 10px;
-  border-color: #884E5D;
-  border-width: 2px;
-}
-
-.playlist-btn:hover {
-  cursor: pointer;
-  color: #884E5D;
-}
-
 .playlists-container {
   border-radius: 15px;
   background-color: #0a0a0a;
@@ -133,6 +134,11 @@ span h3 {
   padding: 1.2rem;
   align-items: center;
   justify-content: center;
+}
+
+.playlist-name-input {
+  border-radius: 10px;
+  text-align: center;
 }
 
 .search-container {
